using System;
using System.Collections.Generic;
using Google.Protobuf;
using Google.Protobuf.Reflection;
using ProtoBuf;

namespace sqlc_gen_csharp
{
    [ProtoContract]
    public class CompositeType
    {
        [ProtoMember(1)] public string Name { get; set; } = "";

        [ProtoMember(2)] public string Comment { get; set; } = "";

        // Constructor and additional logic as needed
    }
    
    [ProtoContract]
    public class File
    {
        [ProtoMember(1)]
        public string Name { get; set; } = "";

        [ProtoMember(2)]
        public byte[] Contents { get; set; } = Array.Empty<byte>();

        // Constructor and additional logic as needed
    }
    
    public class Query : IMessage<Query>
    {
        // Assuming Message<T> is a base class that you have defined elsewhere.
        // If using Protobuf with C#, you'd typically inherit from Google.Protobuf.IMessage
        // or use protobuf-net attributes on your class.

        public string Text { get; set; } = "";

        public string Name { get; set; } = "";

        public string Cmd { get; set; } = "";

        public List<Column> Columns { get; set; } = new();

        public List<Parameter> Params { get; set; } = new();

        public List<string> Comments { get; set; } = new();

        public string Filename { get; set; } = "";

        public Identifier? InsertIntoTable { get; set; }

        // Constructor, serialization, and equality methods would be implemented based on your specific requirements.
        // For example, you might use System.Text.Json or Newtonsoft.Json for JSON serialization,
        // and implement IEquatable<Query> for equality comparison.
        public void MergeFrom(Query message)
        {
            throw new NotImplementedException();
        }

        public void MergeFrom(CodedInputStream input)
        {
            throw new NotImplementedException();
        }

        public void WriteTo(CodedOutputStream output)
        {
            throw new NotImplementedException();
        }

        public int CalculateSize()
        {
            throw new NotImplementedException();
        }

        public MessageDescriptor Descriptor { get; }

        public bool Equals(Query other)
        {
            throw new NotImplementedException();
        }

        public Query Clone()
        {
            throw new NotImplementedException();
        }
    }
    
    public class Identifier : IMessage<Identifier>
    {
        // Default parameterless constructor
        public Identifier()
        {
        }

        // Constructor that could be used for initialization from a partial message
        // Note: The implementation of initializing from a partial message will depend on the specifics of your project
        public Identifier(string catalog, string schema, string name)
        {
            Catalog = catalog;
            Schema = schema;
            Name = name;
        }

        // Use the ProtoMember attribute to specify field numbers
        [ProtoMember(1)] public string Catalog { get; set; } = "";

        [ProtoMember(2)] public string Schema { get; set; } = "";

        [ProtoMember(3)] public string Name { get; set; } = "";

        // Protobuf library in C# handles serialization/deserialization, so explicit methods to handle binary or JSON data 
        // (like fromBinary, fromJson, etc.) are not typically manually defined in the message class.
        // Instead, use the library's built-in mechanisms for (de)serialization.

        // The Equals method could be overridden if necessary to provide custom equality logic
        public bool Equals(Identifier other)
        {
            throw new NotImplementedException();
        }

        public Identifier Clone()
        {
            throw new NotImplementedException();
        }

        public void MergeFrom(Identifier message)
        {
            throw new NotImplementedException();
        }

        // Additional methods for (de)serialization or other logic specific to your application
        // would depend on the APIs provided by the protobuf library you're using.
        public void MergeFrom(CodedInputStream input)
        {
            throw new NotImplementedException();
        }

        public void WriteTo(CodedOutputStream output)
        {
            throw new NotImplementedException();
        }

        public int CalculateSize()
        {
            throw new NotImplementedException();
        }

        public MessageDescriptor Descriptor { get; }

        public override bool Equals(object obj)
        {
            if (obj is Identifier other) return Catalog == other.Catalog && Schema == other.Schema && Name == other.Name;
            return false;
        }

        // Override GetHashCode as well when Equals is overridden
        public override int GetHashCode()
        {
            return HashCode.Combine(Catalog, Schema, Name);
        }
    }
    
    public class Parameter : IMessage<Parameter>
    {
        // Constructor for initializing a new instance of Parameter

        public int Number { get; set; } = 0;

        public Column? Column { get; set; }

        // The fromBinary, fromJson, fromJsonString, and equals methods would need to be implemented based on your serialization/deserialization strategy.
        // For example, you might implement these methods using protobuf-net for Protobuf or System.Text.Json for JSON in .NET.

        // Assuming Message<T> is a base class that you have elsewhere which might handle common serialization tasks or other base functionalities.
        public void MergeFrom(Parameter message)
        {
            throw new NotImplementedException();
        }

        public void MergeFrom(CodedInputStream input)
        {
            throw new NotImplementedException();
        }

        public void WriteTo(CodedOutputStream output)
        {
            throw new NotImplementedException();
        }

        public int CalculateSize()
        {
            throw new NotImplementedException();
        }

        public MessageDescriptor Descriptor { get; }

        public bool Equals(Parameter other)
        {
            throw new NotImplementedException();
        }

        public Parameter Clone()
        {
            throw new NotImplementedException();
        }
    }
    
    [ProtoContract]
    public class Catalog
    {
        [ProtoMember(1)] public string Comment { get; set; } = "";

        [ProtoMember(2)] public string DefaultSchema { get; set; } = "";

        [ProtoMember(3)] public string Name { get; set; } = "";

        [ProtoMember(4)] public List<Schema> Schemas { get; set; } = new();

        // Additional constructor, methods, or logic as needed
    }
    
    [ProtoContract]
    public class CodegenWasm
    {
        [ProtoMember(1)] public string Url { get; set; } = "";

        [ProtoMember(2)] public string Sha256 { get; set; } = "";
    }
    
    [ProtoContract]
    public class Codegen
    {
        [ProtoMember(1)] public string Out { get; set; } = "";

        [ProtoMember(2)] public string Plugin { get; set; } = "";

        [ProtoMember(3)] public byte[] Options { get; set; } = Array.Empty<byte>();

        [ProtoMember(4)] public List<string> Env { get; set; } = new();

        [ProtoMember(5)] public CodegenProcess? Process { get; set; }

        [ProtoMember(6)] public CodegenWasm? Wasm { get; set; }
    }
    
    [ProtoContract]
    public class CodegenProcess
    {
        [ProtoMember(1)] public string Cmd { get; set; } = "";

        // Constructor and additional logic as needed
    }
    
    [ProtoContract]
    public class GenerateRequest
    {
        [ProtoMember(1)] public Settings? Settings { get; set; }

        [ProtoMember(2)] public Catalog? Catalog { get; set; }

        [ProtoMember(3)] public List<Query> Queries { get; set; } = new();

        [ProtoMember(4)] public string SqlcVersion { get; set; } = "";

        [ProtoMember(5)] public byte[] PluginOptions { get; set; } = Array.Empty<byte>();

        [ProtoMember(6)] public byte[] GlobalOptions { get; set; } = Array.Empty<byte>();

        // Constructor, methods, and additional logic as needed
    }
    
    [ProtoContract]
    public class GenerateResponse
    {
        [ProtoMember(1)]
        public List<File> Files { get; set; } = new List<File>();

        // Additional methods or logic as needed
    }
    
    [ProtoContract]
    public class Schema
    {
        [ProtoMember(1)] public string Comment { get; set; } = "";

        [ProtoMember(2)] public string Name { get; set; } = "";

        [ProtoMember(3)] public List<Table> Tables { get; set; } = new();

        [ProtoMember(4)] public List<Enum> Enums { get; set; } = new();

        [ProtoMember(5)] public List<CompositeType> CompositeTypes { get; set; } = new();

        // Additional constructor, methods, or logic as needed
    }
    
    [ProtoContract]
    public class Enum
    {
        [ProtoMember(1)] public string Name { get; set; } = "";

        [ProtoMember(2)] public List<string> Vals { get; set; } = new();

        [ProtoMember(3)] public string Comment { get; set; } = "";

        // Constructor and additional logic as needed
    }
    
    public class Column : IMessage<Column>
    {
        // Protobuf field attributes might need to be adjusted based on the actual protobuf C# implementation
        [ProtoMember(1)] public string Name { get; set; } = "";

        [ProtoMember(3)] public bool NotNull { get; set; }

        [ProtoMember(4)] public bool IsArray { get; set; }

        [ProtoMember(5)] public string Comment { get; set; } = "";

        [ProtoMember(6)] public int Length { get; set; }

        [ProtoMember(7)] public bool IsNamedParam { get; set; }

        [ProtoMember(8)] public bool IsFuncCall { get; set; }

        [ProtoMember(9)] public string Scope { get; set; } = "";

        // Assuming Identifier is a protobuf message defined elsewhere
        [ProtoMember(10)] public Identifier Table { get; set; }

        [ProtoMember(11)] public string TableAlias { get; set; } = "";

        [ProtoMember(12)] public Identifier Type { get; set; }

        [ProtoMember(13)] public bool IsSqlcSlice { get; set; }

        [ProtoMember(14)] public Identifier EmbedTable { get; set; }

        [ProtoMember(15)] public string OriginalName { get; set; } = "";

        [ProtoMember(16)] public bool Unsigned { get; set; }

        [ProtoMember(17)] public int ArrayDims { get; set; }

        // Constructor, methods for binary and JSON (de)serialization, and equality checks
        // would be implemented based on the specific protobuf library's capabilities and patterns in C#.
        // This includes methods like FromBinary, FromJson, FromJsonString, and Equals.
        public void MergeFrom(Column message)
        {
            throw new NotImplementedException();
        }

        public void MergeFrom(CodedInputStream input)
        {
            throw new NotImplementedException();
        }

        public void WriteTo(CodedOutputStream output)
        {
            throw new NotImplementedException();
        }

        public int CalculateSize()
        {
            throw new NotImplementedException();
        }

        public MessageDescriptor Descriptor { get; }

        public bool Equals(Column other)
        {
            throw new NotImplementedException();
        }

        public Column Clone()
        {
            throw new NotImplementedException();
        }
    }
    
    [ProtoContract]
    public class Settings
    {
        [ProtoMember(1)] public string Version { get; set; } = "";

        [ProtoMember(2)] public string Engine { get; set; } = "";

        [ProtoMember(3)] public List<string> Schema { get; set; } = new();

        [ProtoMember(4)] public List<string> Queries { get; set; } = new();

        [ProtoMember(12)] public Codegen? Codegen { get; set; }

        // Additional constructor, methods, or logic as needed
    }
    
    [ProtoContract]
    public class Table
    {
        [ProtoMember(1)] public Identifier? Rel { get; set; }

        [ProtoMember(2)] public List<Column> Columns { get; set; } = new();

        [ProtoMember(3)] public string Comment { get; set; } = "";

        // Additional constructor, methods, or logic as needed
    }
}
