using System;
using Google.Protobuf;
using Google.Protobuf.Reflection;
using ProtoBuf;

namespace sqlc_gen_csharp.drivers.abstractions;

// Assuming Identifier is defined elsewhere
// public class Identifier : IMessage<Identifier> { ... }

public class Column : IMessage<Column>
{
    // Protobuf field attributes might need to be adjusted based on the actual protobuf C# implementation
    [ProtoMember(1)] public string Name { get; set; } = "";

    [ProtoMember(3)] public bool NotNull { get; set; }

    [ProtoMember(4)] public bool IsArray { get; set; }

    [ProtoMember(5)] public string Comment { get; set; } = "";

    [ProtoMember(6)] public int Length { get; set; }

    [ProtoMember(7)] public bool IsNamedParam { get; set; }

    [ProtoMember(8)] public bool IsFuncCall { get; set; }

    [ProtoMember(9)] public string Scope { get; set; } = "";

    // Assuming Identifier is a protobuf message defined elsewhere
    [ProtoMember(10)] public Identifier Table { get; set; }

    [ProtoMember(11)] public string TableAlias { get; set; } = "";

    [ProtoMember(12)] public Identifier Type { get; set; }

    [ProtoMember(13)] public bool IsSqlcSlice { get; set; }

    [ProtoMember(14)] public Identifier EmbedTable { get; set; }

    [ProtoMember(15)] public string OriginalName { get; set; } = "";

    [ProtoMember(16)] public bool Unsigned { get; set; }

    [ProtoMember(17)] public int ArrayDims { get; set; }

    // Constructor, methods for binary and JSON (de)serialization, and equality checks
    // would be implemented based on the specific protobuf library's capabilities and patterns in C#.
    // This includes methods like FromBinary, FromJson, FromJsonString, and Equals.
    public void MergeFrom(Column message)
    {
        throw new NotImplementedException();
    }

    public void MergeFrom(CodedInputStream input)
    {
        throw new NotImplementedException();
    }

    public void WriteTo(CodedOutputStream output)
    {
        throw new NotImplementedException();
    }

    public int CalculateSize()
    {
        throw new NotImplementedException();
    }

    public MessageDescriptor Descriptor { get; }

    public bool Equals(Column other)
    {
        throw new NotImplementedException();
    }

    public Column Clone()
    {
        throw new NotImplementedException();
    }
}